compiler/test/conformance/testdata/errors/28_print_requires_string.yz
main: {
    n : 42
    print(n)
}
